Modify DataCenter & HomeTab & StampTab & CartTab 1.DataCenter - Menu struct 수정
2.Home Tab
- 홈 디자인 변경
- 메뉴선택 뷰에 Cancel 버튼 추가
  버튼 클릭 시 카페선택 뷰로 이동

3.Stamp Tab
- Collection View 로 스탬프 보여주기

4.Cart Tab
- 서로 다른 카페의 음료를 담을 수 없도록 수정
  UIAlert 띄어줌

--- a/SmartOrder/SmartOrder/Order/Order.storyboard
+++ b/SmartOrder/SmartOrder/Order/Order.storyboard
@@ -288,4 +288,5 @@
     <resources>
         <image name="Unlike" width="150" height="134"/>
     </resources>
+    <color key="tintColor" red="0.28061923384666443" green="0.49708396196365356" blue="0.96871286630630493" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
 </document>
