--- a/SmartOrder/SmartOrder/Base.lproj/Main.storyboard
+++ b/SmartOrder/SmartOrder/Base.lproj/Main.storyboard
@@ -13,7 +13,7 @@
         <!--카페선택-->
         <scene sceneID="7Bh-xp-dof">
             <objects>
-                <collectionViewController title="카페선택" id="v1J-UE-HZ4" customClass="CaffeCollectionViewController" customModule="SmartOrder" customModuleProvider="target" sceneMemberID="viewController">
+                <collectionViewController storyboardIdentifier="OrderMenu" title="카페선택" id="v1J-UE-HZ4" customClass="CaffeCollectionViewController" customModule="SmartOrder" customModuleProvider="target" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="A22-ef-Y8M">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -65,7 +65,7 @@
         <!--Home View Controller-->
         <scene sceneID="VyW-Ad-mwM">
             <objects>
-                <viewController id="rNd-s1-LGB" customClass="HomeViewController" customModule="SmartOrder" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="Home" id="rNd-s1-LGB" customClass="HomeViewController" customModule="SmartOrder" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="2Pd-f3-9y1">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -113,7 +113,7 @@
                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <state key="normal" title="Button" image="order3white"/>
                                 <connections>
-                                    <segue destination="v1J-UE-HZ4" kind="show" id="fLK-3o-0d7"/>
+                                    <segue destination="v1J-UE-HZ4" kind="show" identifier="SelectedOrderMenu" id="fLK-3o-0d7"/>
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="주문하기" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="w27-y9-BzA">
@@ -658,25 +658,25 @@
                                 </connections>
                             </segmentedControl>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="aoc-Hc-V6T">
-                                <rect key="frame" x="20" y="121" width="374" height="672"/>
+                                <rect key="frame" x="48" y="149" width="317" height="597"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="IdQ-Ra-lbl">
-                                    <size key="itemSize" width="83" height="77"/>
+                                    <size key="itemSize" width="55" height="52"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Stamp" id="cki-44-ISl" customClass="StampsCollectionViewCell" customModule="SmartOrder" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="83" height="77"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="55" height="52"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                            <rect key="frame" x="0.0" y="0.0" width="83" height="77"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="55" height="52"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="WN8-rc-uoL">
-                                                    <rect key="frame" x="0.0" y="0.0" width="83" height="77"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="55" height="52"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 </imageView>
                                             </subviews>
